--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <p>Forever & always yours 💕</p>
 
   <!-- Change the link below to your surprise URL -->
-  <a href="https://yoursurpriselink.com" class="button">Click for your surprise 🎁💝</a>
+  <a href="surprise.html" class="button">Click for your surprise 🎁💝</a>
 
   <!-- Background Music -->
   <audio autoplay loop>
