--- a/surprise.html
+++ b/surprise.html
@@ -59,25 +59,30 @@
 
     .slides {
       display: flex;
-      width: 400%;
-      animation: slide 16s infinite;
+      width: 900%; /* 9 items total */
+      animation: slide 36s infinite;
     }
 
-    .slides img {
+    .slides img,
+    .slides video {
       width: 100%;
+      height: 100%;
       object-fit: cover;
       border-radius: 20px;
+      flex-shrink: 0;
     }
 
     @keyframes slide {
       0% { transform: translateX(0%); }
-      20% { transform: translateX(0%); }
-      25% { transform: translateX(-100%); }
-      45% { transform: translateX(-100%); }
-      50% { transform: translateX(-200%); }
-      70% { transform: translateX(-200%); }
-      75% { transform: translateX(-300%); }
-      95% { transform: translateX(-300%); }
+      10% { transform: translateX(0%); }
+      20% { transform: translateX(-100%); }
+      30% { transform: translateX(-200%); }
+      40% { transform: translateX(-300%); }
+      50% { transform: translateX(-400%); }
+      60% { transform: translateX(-500%); }
+      70% { transform: translateX(-600%); }
+      80% { transform: translateX(-700%); }
+      90% { transform: translateX(-800%); }
       100% { transform: translateX(0%); }
     }
 
@@ -157,16 +162,20 @@
   <!-- Slideshow -->
   <div class="slideshow">
     <div class="slides">
-      <img src="pic1.jpg" alt="Memory 1">
-      <img src="pic2.jpg" alt="Memory 2">
-      <img src="pic3.jpg" alt="Memory 3">
-      <img src="pic4.jpg" alt="Memory 4">
+      <video src="images/pic1.mp4" autoplay muted loop></video>
+      <img src="images/pic2.jpg" alt="Memory 2">
+      <video src="images/pic3.mp4" autoplay muted loop></video>
+      <video src="images/pic4.mp4" autoplay muted loop></video>
+      <img src="images/pic5.jpg" alt="Memory 5">
+      <img src="images/pic6.jpg" alt="Memory 6">
+      <video src="images/pic7.mp4" autoplay muted loop></video>
+      <video src="images/pic8.mp4" autoplay muted loop></video>
+      <video src="images/pic9.mp4" autoplay muted loop></video>
     </div>
   </div>
 
   <!-- Typewriter message -->
   <div class="typewriter">You are my sunshine, my best friend, and my forever love 💕</div>
-
 
   <!-- Background Music -->
   <audio autoplay loop>
