--- a/surprise.html
+++ b/surprise.html
@@ -3,143 +3,208 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday</title>
+  <title>Happy Birthday My Love 💕</title>
   <style>
     body {
-      text-align: center;
-      background: linear-gradient(to right, #ffecd2, #fcb69f);
-      font-family: Arial, sans-serif;
-      overflow-x: hidden;
       margin: 0;
-      padding: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      overflow: hidden;
+      text-align: center;
     }
 
     h1 {
-      font-size: 2.5em;
-      color: #ff4081;
-      text-shadow: 2px 2px 4px #00000050;
-      animation: glow 1.5s infinite alternate;
+      font-size: 3em;
+      color: white;
+      text-shadow: 0 0 20px #ffb6c1, 0 0 40px #ff69b4, 0 0 60px #ff1493;
+      animation: glow 2s infinite alternate;
+      position: relative;
     }
 
     @keyframes glow {
-      from { text-shadow: 0 0 10px #ff4081, 0 0 20px #ff80ab; }
-      to   { text-shadow: 0 0 20px #f50057, 0 0 30px #ff4081; }
+      from { text-shadow: 0 0 10px #ff6ec7, 0 0 20px #ffb6c1; }
+      to { text-shadow: 0 0 30px #ff1493, 0 0 60px #ff69b4; }
     }
 
+    h1::after {
+      content: "✨";
+      position: absolute;
+      right: -30px;
+      animation: sparkle 1.5s infinite;
+    }
+
+    @keyframes sparkle {
+      0% { opacity: 0; transform: scale(0.5) rotate(0deg); }
+      50% { opacity: 1; transform: scale(1.3) rotate(180deg); }
+      100% { opacity: 0; transform: scale(0.5) rotate(360deg); }
+    }
+
+    /* Slideshow */
     .slideshow {
-      width: 90%;             /* take most of screen width */
-      height: 50vh;           /* half of device screen height */
-      margin: 20px auto;
+      width: 100%;         
+      height: 50vh;        /* half of device screen */
+      margin: 0 auto;
       position: relative;
       overflow: hidden;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.3);
     }
 
     .slides {
       display: flex;
-      width: 900%;            /* 9 items */
+      width: 900%;          /* 9 slides */
       height: 100%;
       animation: slide 36s infinite;
     }
 
     .slides img,
     .slides video {
-      flex: 0 0 100%;         /* each fills the slideshow width */
-      height: 100%;           /* match slideshow height */
-      object-fit: cover;      /* crop nicely */
-      border-radius: 20px;
+      flex: 0 0 100%;      
+      width: 100%;
+      height: 100%;
+      object-fit: cover;   /* makes them fill perfectly */
     }
 
     @keyframes slide {
-      0%, 10%   { transform: translateX(0%); }
-      20%       { transform: translateX(-100%); }
-      30%       { transform: translateX(-200%); }
-      40%       { transform: translateX(-300%); }
-      50%       { transform: translateX(-400%); }
-      60%       { transform: translateX(-500%); }
-      70%       { transform: translateX(-600%); }
-      80%       { transform: translateX(-700%); }
-      90%       { transform: translateX(-800%); }
-      100%      { transform: translateX(0%); }
+      0% { transform: translateX(0%); }
+      10% { transform: translateX(0%); }
+      20% { transform: translateX(-100%); }
+      30% { transform: translateX(-200%); }
+      40% { transform: translateX(-300%); }
+      50% { transform: translateX(-400%); }
+      60% { transform: translateX(-500%); }
+      70% { transform: translateX(-600%); }
+      80% { transform: translateX(-700%); }
+      90% { transform: translateX(-800%); }
+      100% { transform: translateX(0%); }
     }
 
-    /* Balloons */
-    .balloon {
-      position: absolute;
-      bottom: -100px;
-      width: 40px;
-      height: 60px;
-      background-color: pink;
-      border-radius: 50%;
-      animation: rise 10s infinite;
+    /* Typewriter effect */
+    .typewriter {
+      font-size: 1.4em;
+      color: white;
+      margin-top: 10px;
+      border-right: 2px solid white;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+      animation: typing 6s steps(40, end) forwards, blink 0.8s infinite;
     }
 
-    @keyframes rise {
-      from { transform: translateY(0); opacity: 1; }
-      to   { transform: translateY(-120vh); opacity: 0; }
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
     }
 
-    /* Floating hearts */
+    @keyframes blink {
+      0%, 100% { border-color: transparent; }
+      50% { border-color: white; }
+    }
+
+    /* Button */
+    .button {
+      margin-top: 20px;
+      padding: 15px 30px;
+      font-size: 1.3em;
+      color: white;
+      background: #ff1493;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      text-decoration: none;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      animation: pulse 1.5s infinite;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+
+    /* Falling items */
     .falling {
-      position: fixed;
-      top: -50px;
-      font-size: 24px;
-      animation: fall 5s linear infinite;
+      position: absolute;
+      font-size: 20px;
+      animation: fall 6s linear infinite;
+      user-select: none;
     }
 
     @keyframes fall {
-      to { transform: translateY(100vh); opacity: 0; }
+      0% { transform: translateY(-10vh) rotate(0deg); opacity: 1; }
+      100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
+    }
+
+    /* Floating balloons */
+    .balloon {
+      position: absolute;
+      bottom: -100px;
+      font-size: 30px;
+      animation: rise 8s linear infinite;
+    }
+
+    @keyframes rise {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-120vh); opacity: 0; }
     }
   </style>
 </head>
 <body>
-  <h1>🎉 Happy Birthday My Love 💖</h1>
+  <h1>Happy Birthday, My Darling 💖</h1>
 
-  <!-- Slideshow with images + videos -->
+  <!-- Slideshow -->
   <div class="slideshow">
     <div class="slides">
       <video src="images/pic1.mp4" autoplay muted loop></video>
       <img src="images/pic2.jpg" alt="Memory 2">
       <video src="images/pic3.mp4" autoplay muted loop></video>
-      <img src="images/pic4.jpg" alt="Memory 4">
-      <video src="images/pic5.mp4" autoplay muted loop></video>
+      <video src="images/pic4.mp4" autoplay muted loop></video>
+      <img src="images/pic5.jpg" alt="Memory 5">
       <img src="images/pic6.jpg" alt="Memory 6">
       <video src="images/pic7.mp4" autoplay muted loop></video>
-      <img src="images/pic8.jpg" alt="Memory 8">
+      <video src="images/pic8.mp4" autoplay muted loop></video>
       <video src="images/pic9.mp4" autoplay muted loop></video>
     </div>
   </div>
 
-  <!-- Background music -->
+  <!-- Typewriter message -->
+  <div class="typewriter">You are my sunshine, my best friend, and my forever love 💕</div>
+
+  <!-- Background Music -->
   <audio autoplay loop>
     <source src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" type="audio/mp3">
   </audio>
 
   <script>
-    // Balloons
+    // Falling hearts & teddy bears
+    const emojis = ["💖", "🧸"];
+    function createFallingEmoji() {
+      const fall = document.createElement("div");
+      fall.classList.add("falling");
+      fall.innerHTML = emojis[Math.floor(Math.random() * emojis.length)];
+      fall.style.left = Math.random() * 100 + "vw";
+      fall.style.fontSize = Math.random() * 25 + 20 + "px";
+      fall.style.animationDuration = Math.random() * 4 + 3 + "s";
+      document.body.appendChild(fall);
+      setTimeout(() => fall.remove(), 7000);
+    }
+    setInterval(createFallingEmoji, 400);
+
+    // Floating balloons 🎈
     function createBalloon() {
       const balloon = document.createElement("div");
-      balloon.className = "balloon";
+      balloon.classList.add("balloon");
+      balloon.innerHTML = "🎈";
       balloon.style.left = Math.random() * 100 + "vw";
-      balloon.style.backgroundColor = `hsl(${Math.random() * 360}, 70%, 70%)`;
-      balloon.style.animationDuration = (5 + Math.random() * 5) + "s";
+      balloon.style.fontSize = Math.random() * 20 + 25 + "px";
+      balloon.style.animationDuration = Math.random() * 5 + 6 + "s";
       document.body.appendChild(balloon);
-      setTimeout(() => balloon.remove(), 10000);
+      setTimeout(() => balloon.remove(), 8000);
     }
-    setInterval(createBalloon, 1000);
-
-    // Floating emojis
-    function createFalling() {
-      const falling = document.createElement("div");
-      falling.className = "falling";
-      falling.innerText = "💖";
-      falling.style.left = Math.random() * 100 + "vw";
-      falling.style.animationDuration = (3 + Math.random() * 2) + "s";
-      document.body.appendChild(falling);
-      setTimeout(() => falling.remove(), 5000);
-    }
-    setInterval(createFalling, 500);
+    setInterval(createBalloon, 1500);
   </script>
 </body>
 </html>
