--- a/surprise.html
+++ b/surprise.html
@@ -60,12 +60,22 @@
       animation: slide 36s infinite;
     }
 
-    .slides img,
-    .slides video {
-      flex: 0 0 100%;      
+    /* Force images */
+    .slides img {
+      flex: 0 0 100%;
       width: 100%;
       height: 100%;
-      object-fit: cover;   /* makes them fill perfectly */
+      object-fit: cover;
+      display: block;
+    }
+
+    /* Force videos */
+    .slides video {
+      flex: 0 0 100%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
     }
 
     @keyframes slide {
@@ -153,7 +163,7 @@
   </style>
 </head>
 <body>
-  <h1>Happy Birthday, My Darling 💖</h1>
+  <h1>Happy Birthday, My Sweet Little Potato 💖</h1>
 
   <!-- Slideshow -->
   <div class="slideshow">
