--- a/surprise.html
+++ b/surprise.html
@@ -45,40 +45,33 @@
     }
 
     /* Slideshow */
-    .slideshow {
-      width: 100%;         
-      height: 50vh;        /* half of device screen */
-      margin: 0 auto;
-      position: relative;
-      overflow: hidden;
-    }
+   .slideshow {
+  width: 100%;
+  height: 50vh; /* Half of the screen height */
+  margin: 20px auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+}
 
-    .slides {
-      display: flex;
-      width: 900%;          /* 9 slides */
-      height: 100%;
-      animation: slide 36s infinite;
-    }
+.slides {
+  display: flex;
+  width: 900%;
+  height: 100%;
+  animation: slide 36s infinite;
+}
 
-    /* Force images */
-    .slides img {
-      flex: 0 0 100%;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
+.slides img,
+.slides video {
+  flex: 0 0 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures video/image covers the frame */
+  border-radius: 20px;
+}
 
-    /* Force videos */
-    .slides video {
-      flex: 0 0 100%;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    @keyframes slide {
+       @keyframes slide {
       0% { transform: translateX(0%); }
       10% { transform: translateX(0%); }
       20% { transform: translateX(-100%); }
@@ -166,19 +159,21 @@
   <h1>Happy Birthday, My Sweet Little Potato 💖</h1>
 
   <!-- Slideshow -->
-  <div class="slideshow">
-    <div class="slides">
-      <video src="images/pic1.mp4" autoplay muted loop></video>
-      <img src="images/pic2.jpg" alt="Memory 2">
-      <video src="images/pic3.mp4" autoplay muted loop></video>
-      <video src="images/pic4.mp4" autoplay muted loop></video>
-      <img src="images/pic5.jpg" alt="Memory 5">
-      <img src="images/pic6.jpg" alt="Memory 6">
-      <video src="images/pic7.mp4" autoplay muted loop></video>
-      <video src="images/pic8.mp4" autoplay muted loop></video>
-      <video src="images/pic9.mp4" autoplay muted loop></video>
-    </div>
+ <!-- Slideshow -->
+<div class="slideshow">
+  <div class="slides">
+    <video src="images/pic1.mp4" autoplay muted loop playsinline></video>
+    <img src="images/pic2.jpg" alt="Memory 2">
+    <video src="images/pic3.mp4" autoplay muted loop playsinline></video>
+    <video src="images/pic4.mp4" autoplay muted loop playsinline></video>
+    <img src="images/pic5.jpg" alt="Memory 5">
+    <img src="images/pic6.jpg" alt="Memory 6">
+    <video src="images/pic7.mp4" autoplay muted loop playsinline></video>
+    <video src="images/pic8.mp4" autoplay muted loop playsinline></video>
+    <video src="images/pic9.mp4" autoplay muted loop playsinline></video>
   </div>
+</div>
+
 
   <!-- Typewriter message -->
   <div class="typewriter">You are my sunshine, my best friend, and my forever love 💕</div>
