--- a/surprise.html
+++ b/surprise.html
@@ -46,8 +46,8 @@
 
     /* Slideshow */
    .slideshow {
-  width: 100%;
-  height: 50vh; /* Half of the screen height */
+  width: 250PX;
+  height: 250PXvh; /* Half of the screen height */
   margin: 20px auto;
   position: relative;
   overflow: hidden;
@@ -57,8 +57,8 @@
 
 .slides {
   display: flex;
-  width: 900%;
-  height: 100%;
+  width: 250PX;
+  height: 250PX;
   animation: slide 36s infinite;
 }
 
