--- a/surprise.html
+++ b/surprise.html
@@ -47,7 +47,7 @@
     /* Slideshow */
    .slideshow {
   width: 250PX;
-  height: 250PXvh; /* Half of the screen height */
+  height: 250px; /* Half of the screen height */
   margin: 20px auto;
   position: relative;
   overflow: hidden;
